<resources>
    <string name="app_name">InterTravellin</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="regBtn">REGISTER</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="PleaseVerifyallfields">Please Verify all fields</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">back</string>
    <string name="verifyphoto">Please insert a photo profile!</string>
    <string name="regEmailReset">Enter your registered email</string>
    <string name="Wehavesentyouinstructionstoresetyourpassword">We have sent you instructions to reset your password !!</string>
    <string name="Failedtosendresetemail">Failed to send reset email!</string>
    <string name="Allfieldsmustbefilled">All fields must be filled!</string>
    <string name="Thepasswordsmustbeequals">The passwords must be equals !!</string>
    <string name="Accountcreated">Account created !</string>
    <string name="Accountcreationfailed">Account creation failed !!</string>
    <string name="RegisterComplete">Register Complete !!</string>
    <string name="doc">Docs &amp; Requirements</string>
    <string name="responsabilities">This documents don\'t take away the responsabilitie of read the notice!</string>
    <string name="score">SCORE</string>
    <string name="ready">Be ready for any challanges !</string>
    <string name="desc">Description</string>
</resources>
